--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,14 +8,14 @@ platform:
 
 environment:
   matrix:
-    - MINICONDA: C:\xdataframe-conda
+    - MINICONDA: C:\xframe-conda
 
 init:
   - "ECHO %MINICONDA%"
   - C:\"Program Files (x86)"\"Microsoft Visual Studio 14.0"\VC\vcvarsall.bat %PLATFORM%
   - ps: if($env:Platform -eq "x64"){Start-FileDownload 'http://repo.continuum.io/miniconda/Miniconda3-latest-Windows-x86_64.exe' C:\Miniconda.exe; echo "Done"}
   - ps: if($env:Platform -eq "x86"){Start-FileDownload 'http://repo.continuum.io/miniconda/Miniconda3-latest-Windows-x86.exe' C:\Miniconda.exe; echo "Done"}
-  - cmd: C:\Miniconda.exe /S /D=C:\xdataframe-conda
+  - cmd: C:\Miniconda.exe /S /D=C:\xframe-conda
   - "set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%MINICONDA%\\Library\\bin;%PATH%"
 
 install:
@@ -24,8 +24,8 @@ install:
   - conda info -a
   - conda install gtest cmake xtl xtensor -c conda-forge
   - cmake -G "NMake Makefiles" -D CMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DBUILD_TESTS=ON .
-  - nmake test_xdataframe
+  - nmake test_xframe
   - cd test
 
 build_script:
-  - .\test_xdataframe
+  - .\test_xframe
