--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -79,9 +79,8 @@ include_directories(${GTEST_INCLUDE_DIRS})
 set(XFRAME_TESTS
     main.cpp
     test_xaxis.cpp
+    test_xcoordinate.cpp
     test_xframe_utils.cpp
-    test_xseries.cpp
-    test_xseries_math.cpp
 )
 
 set(XFRAME_TARGET test_xframe)
