first implementation of xvariable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ set(XFRAME_HEADERS
     ${XFRAME_INCLUDE_DIR}/xframe/xframe_utils.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xseries.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xseries_function.hpp
+    ${XFRAME_INCLUDE_DIR}/xframe/xvariable.hpp
 )
 
 OPTION(BUILD_TESTS "xframe test suite" OFF)
