first implementation of xvariable_function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,8 @@ set(XFRAME_HEADERS
     ${XFRAME_INCLUDE_DIR}/xframe/xseries_function.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xvariable.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xvariable_base.hpp
+    ${XFRAME_INCLUDE_DIR}/xframe/xvariable_function.hpp
+    ${XFRAME_INCLUDE_DIR}/xframe/xvariable_math.hpp
 )
 
 OPTION(BUILD_TESTS "xframe test suite" OFF)
