--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,16 +39,14 @@ include_directories(${xtl_INCLUDE_DIRS})
 
 set(XFRAME_HEADERS
     ${XFRAME_INCLUDE_DIR}/xframe/xaxis.hpp
+    ${XFRAME_INCLUDE_DIR}/xframe/xaxis_variant.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xcoordinate.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xdimension.hpp
-    ${XFRAME_INCLUDE_DIR}/xframe/xframe_assign.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xframe_config.hpp
-    ${XFRAME_INCLUDE_DIR}/xframe/xframe_math.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xframe_utils.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xselecting.hpp
-    ${XFRAME_INCLUDE_DIR}/xframe/xseries.hpp
-    ${XFRAME_INCLUDE_DIR}/xframe/xseries_function.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xvariable.hpp
+    ${XFRAME_INCLUDE_DIR}/xframe/xvariable_assign.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xvariable_base.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xvariable_function.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xvariable_math.hpp
