variable expressions invovling scalar

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ set(XFRAME_HEADERS
     ${XFRAME_INCLUDE_DIR}/xframe/xvariable_base.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xvariable_function.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xvariable_math.hpp
+    ${XFRAME_INCLUDE_DIR}/xframe/xvariable_scalar.hpp
 )
 
 OPTION(BUILD_TESTS "xframe test suite" OFF)
