--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -87,6 +87,7 @@ set(XFRAME_TESTS
     test_xvariable_assign.cpp
     test_xvariable_function.cpp
     test_xvariable_noalias.cpp
+    test_xvariable_scalar.cpp
 )
 
 set(XFRAME_TARGET test_xframe)
