--- a/.travis.yml
+++ b/.travis.yml
@@ -96,7 +96,8 @@ install:
     - hash -r
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
-    - conda install gtest cmake xtl xtensor -c conda-forge 
+    - conda install gtest cmake -c conda-forge 
+    - conda install xtl xtensor -c QuantStack
     # Testing
     - mkdir build
     - cd build
