--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -82,6 +82,7 @@ set(XFRAME_TESTS
     test_xaxis.cpp
     test_xcoordinate.cpp
     test_xdimension.cpp
+    test_xdynamic_variable.cpp
     test_xframe_utils.cpp
     test_xvariable.cpp
     test_xvariable_assign.cpp
