trace added so debugging is easier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,8 @@ set(XFRAME_HEADERS
     ${XFRAME_INCLUDE_DIR}/xframe/xdimension.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xdynamic_variable.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xframe_config.hpp
+    ${XFRAME_INCLUDE_DIR}/xframe/xframe_expression.hpp
+    ${XFRAME_INCLUDE_DIR}/xframe/xframe_trace.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xframe_utils.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xselecting.hpp
     ${XFRAME_INCLUDE_DIR}/xframe/xvariable.hpp
