--- a/.travis.yml
+++ b/.travis.yml
@@ -97,7 +97,7 @@ install:
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
     - conda install gtest cmake -c conda-forge 
-    - conda install xtl xtensor==0.15.4 -c QuantStack
+    - conda install xtl xtensor -c QuantStack
     # Testing
     - mkdir build
     - cd build
