--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -83,6 +83,7 @@ set(XFRAME_TESTS
     test_xaxis.cpp
     test_xaxis_default.cpp
     test_xaxis_variant.cpp
+    test_xaxis_function.cpp
     test_xaxis_view.cpp
     test_xcoordinate.cpp
     test_xcoordinate_view.cpp
