--- a/.travis.yml
+++ b/.travis.yml
@@ -109,7 +109,7 @@ install:
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
     - conda install gtest cmake -c conda-forge
-    - conda install xtl xtensor=0.17.4 -c QuantStack
+    - conda install xtensor=0.18.0 -c QuantStack
     # Testing
     - mkdir build
     - cd build
