xcoordinate_chain implementation

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -86,6 +86,7 @@ set(XFRAME_TESTS
     test_xaxis_variant.cpp
     test_xaxis_view.cpp
     test_xcoordinate.cpp
+    test_xcoordinate_chain.cpp
     test_xcoordinate_view.cpp
     test_xdimension.cpp
     test_xdynamic_variable.cpp
