basic implementation of xreindex_view

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -92,6 +92,7 @@ set(XFRAME_TESTS
     test_xdynamic_variable.cpp
     test_xframe_utils.cpp
     test_xnamed_axis.cpp
+    test_xreindex_view.cpp
     test_xsequence_view.cpp
     test_xvariable.cpp
     test_xvariable_assign.cpp
