--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,6 @@ os: Visual Studio 2015
 
 platform:
   - x64
-  - x86
 
 environment:
   matrix:
@@ -23,7 +22,7 @@ install:
   - conda update -q conda
   - conda info -a
   - conda install gtest cmake -c conda-forge
-  - conda install xtensor=0.18.2 -c QuantStack
+  - conda install xtensor=0.18.3 -c conda-forge
   - cmake -G "NMake Makefiles" -D CMAKE_INSTALL_PREFIX=%MINICONDA%\\LIBRARY -DBUILD_TESTS=ON .
   - nmake test_xframe
   - cd test
