xvector_variant initial implementation

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -103,6 +103,7 @@ set(XFRAME_TESTS
     test_xvariable_scalar.cpp
     test_xvariable_view.cpp
     test_xvariable_view_assign.cpp
+    test_xvector_variant.cpp
 )
 
 set(XFRAME_TARGET test_xframe)
