Add tests for xexpand_dims_view

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -87,6 +87,7 @@ set(XFRAME_TESTS
     test_xaxis_view.cpp
     test_xcoordinate.cpp
     test_xcoordinate_chain.cpp
+    test_xcoordinate_expanded.cpp
     test_xcoordinate_view.cpp
     test_xdimension.cpp
     test_xdynamic_variable.cpp
