--- a/.travis.yml
+++ b/.travis.yml
@@ -107,6 +107,9 @@ install:
     - export PATH="$HOME/miniconda/bin:$PATH"
     - hash -r
     - conda config --set always_yes yes --set changeps1 no
+    # The 2 following lines are a workaround to https://github.com/conda/conda/issues/9337
+    - pip uninstall -y setuptools
+    - conda install setuptools
     - conda update -q conda
     - conda install cmake -c conda-forge
     - conda install xtensor=0.20.5 -c conda-forge
